--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -24,7 +24,6 @@ We are comparing these packages with `collections`.
     `r packageDescription("hashmap")$Version`
 - [fastmap](https://CRAN.R-project.org/package=fastmap)
     `r packageDescription("fastmap")$Version`
-- base: R native methods implemented by collections
 
 
 ```{r global_options, include=FALSE}
@@ -75,11 +74,11 @@ test_collections_queue_push_pop <- function(n) {
 
 ```{r queue, echo = FALSE}
 tm <- microbenchmark(
-    dequer = test_dequer_queue_push_pop(100),
-    datastructures = test_datastructures_queue_push_pop(100),
-    liqueueR = test_liqueueR_queue_push_pop(100),
-    base = test_collections_queue_l_push_pop(100),
-    collections = test_collections_queue_push_pop(100),
+    `dequer::queue` = test_dequer_queue_push_pop(100),
+    `datastructures::queue` = test_datastructures_queue_push_pop(100),
+    `liqueueR::Queue` = test_liqueueR_queue_push_pop(100),
+    `collections::QueueL` = test_collections_queue_l_push_pop(100),
+    `collections::Queue` = test_collections_queue_push_pop(100),
     unit = "relative"
 )
 autoplot(tm) + ggtitle("push and pop 100 times")
@@ -90,10 +89,10 @@ autoplot(tm) + ggtitle("push and pop 100 times")
 
 ```{r, echo = FALSE}
 test_dequer_stack_push_pop <- function(n) {
-    q <- dequer::queue()
-    pushback <- dequer::pushback
+    q <- dequer::stack()
+    push <- dequer::push
     pop <- dequer::pop
-    for (i in 1:n) pushback(q, rnorm(1))
+    for (i in 1:n) push(q, rnorm(1))
     for (i in 1:n) pop(q)
     q
 }
@@ -127,11 +126,11 @@ test_collections_stack_push_pop <- function(n) {
 
 ```{r stack, echo = FALSE}
 tm <- microbenchmark(
-    dequer = test_dequer_stack_push_pop(100),
-    datastructures = test_datastructures_stack_push_pop(100),
-    liqueueR = test_liqueueR_stack_push_pop(100),
-    base = test_collections_stack_l_push_pop(100),
-    collections = test_collections_stack_push_pop(100),
+    `dequer::stack` = test_dequer_stack_push_pop(100),
+    `datastructures::stack` = test_datastructures_stack_push_pop(100),
+    `liqueueR::Stack` = test_liqueueR_stack_push_pop(100),
+    `collections::StackL` = test_collections_stack_l_push_pop(100),
+    `collections::Stack` = test_collections_stack_push_pop(100),
     unit = "relative"
 )
 autoplot(tm) + ggtitle("push and pop 100 times")
@@ -174,9 +173,9 @@ test_collections_deque_push_pop <- function(n) {
 
 ```{r deque, echo = FALSE}
 tm <- microbenchmark(
-    dequer = test_dequer_deque_push_pop(100),
-    base = test_collections_deque_l_push_pop(100),
-    collections = test_collections_deque_push_pop(100),
+    `dequer::deque` = test_dequer_deque_push_pop(100),
+    `collections::DequeL` = test_collections_deque_l_push_pop(100),
+    `collections::Deque` = test_collections_deque_push_pop(100),
     unit = "relative"
 )
 autoplot(tm) + ggtitle("push and pop 100 times")
@@ -211,9 +210,9 @@ test_collections_pqueue_push_pop <- function(n) {
 
 ```{r pqueue, echo = FALSE}
 tm <- microbenchmark(
-    liqueueR = test_liqueueR_pqueue_push_pop(100),
-    datastructures = test_datastructures_pqueue_push_pop(100),
-    collections = test_collections_pqueue_push_pop(100),
+    `liqueueR::PriorityQueue` = test_liqueueR_pqueue_push_pop(100),
+    `datastructures::binomial_heap` = test_datastructures_pqueue_push_pop(100),
+    `collections::PriorityQueue` = test_collections_pqueue_push_pop(100),
     unit = "relative"
 )
 autoplot(tm) + ggtitle("push and pop 100 times")
@@ -264,12 +263,12 @@ test_collections_dict_set_get <- function(n) {
 
 ```{r dict, echo = FALSE}
 tm <- microbenchmark(
-    datastructures = test_datastructures_dict_set_get(100),
-    hash = test_hash_dict_set_get(100),
-    hashmap = test_hashmap_dict_set_get(100),
-    fastmap = test_fastmap_dict_set_get(100),
-    base = test_collections_dictl_set_get(100),
-    collections = test_collections_dict_set_get(100),
+    `datastructures::hashmap` = test_datastructures_dict_set_get(100),
+    `hash::hash` = test_hash_dict_set_get(100),
+    `hashmap::hashmap` = test_hashmap_dict_set_get(100),
+    `fastmap::fastmap` = test_fastmap_dict_set_get(100),
+    `collections::DictL` = test_collections_dictl_set_get(100),
+    `collections::Dict` = test_collections_dict_set_get(100),
     unit = "relative"
 )
 autoplot(tm) + ggtitle("set and get 100 times")
@@ -294,8 +293,8 @@ test_collections_ordered_dict_set_get <- function(n) {
 
 ```{r ordered_dict, echo = FALSE}
 tm <- microbenchmark(
-    base = test_collections_ordered_dict_l_set_get(100),
-    collections = test_collections_ordered_dict_set_get(100),
+    `collections::OrderedDictL` = test_collections_ordered_dict_l_set_get(100),
+    `collections::OrderedDict` = test_collections_ordered_dict_set_get(100),
     unit = "relative"
 )
 autoplot(tm) + ggtitle("set and get 100 times")
