--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,9 @@ d <- packageDescription("collections")
 cat(c("# ", paste(trimws(strsplit(d$Title, "\n")[[1]]), collapse = " ")))
 ```
 
+[![Github Action](https://github.com/randy3k/collections/workflows/build/badge.svg?branch=master)](https://github.com/randy3k/collections)
 [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/collections)](https://cran.r-project.org/package=collections)
-
-Github: [https://github.com/randy3k/collections](https://github.com/randy3k/collections)
+[![](http://cranlogs.r-pkg.org/badges/grand-total/collections)](https://cran.r-project.org/package=collections)
 
 Documentation: [http://randy3k.github.io/collections](https://randy3k.github.io/collections)
 
@@ -47,7 +47,7 @@ a small amount of memory may be leaked.
 hashmap for atomic vectors using boost library.
 
 [fastmap](https://CRAN.R-project.org/package=fastmap) provides hashmap
-which doesn't not leak memory. The current implementation of collection::Dict
+which does not leak memory. The current implementation of collection::Dict
 is actually inspired by it. However, a more
 efficient hash table library [tommy](https://github.com/amadvance/tommyds/)
 is used.
