--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -24,299 +24,294 @@ We are comparing these packages with `collections`.
     `r packageDescription("hashmap")$Version`
 - [fastmap](https://CRAN.R-project.org/package=fastmap)
     `r packageDescription("fastmap")$Version`
+- Base R [implementation](https://github.com/randy3k/collections/blob/master/vignettes/baseR.Rmd)
 
 
 ```{r global_options, include=FALSE}
-library(microbenchmark)
-library(ggplot2)
+requireNamespace("bench")
+library(tidyverse)
 options(digits = 3)
 knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+source("baseR.R")
 ```
 
 ## Queue
 
-```{r, echo = FALSE}
-test_dequer_queue_push_pop <- function(n) {
-    q <- dequer::queue()
-    pushback <- dequer::pushback
-    pop <- dequer::pop
-    for (i in 1:n) pushback(q, rnorm(1))
-    for (i in 1:n) pop(q)
-    q
-}
-test_datastructures_queue_push_pop <- function(n) {
-    q <- datastructures::queue()
-    insert <- datastructures::insert
-    pop <- datastructures::pop
-    for (i in 1:n) insert(q, rnorm(1))
-    for (i in 1:n) pop(q)
-    q
-}
-test_liqueueR_queue_push_pop <- function(n) {
-    q <- liqueueR::Queue$new()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:n) q$pop()
-    q
-}
-test_collections_queue_l_push_pop <- function(n) {
-    q <- collections::QueueL()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:n) q$pop()
-    q
-}
-test_collections_queue_push_pop <- function(n) {
-    q <- collections::Queue()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:n) q$pop()
-    q
-}
+```{r queue, echo = FALSE, cache = TRUE}
+bench::press(
+    n = c(50, 100, 500, 1000),
+    bench::mark(
+        `dequer::queue` = {
+            q <- dequer::queue()
+            pushback <- dequer::pushback
+            pop <- dequer::pop
+            x <- rnorm(n)
+            for (i in 1:n) pushback(q, x[i])
+            for (i in 1:n) pop(q)
+        },
+        `datastructures::queue` = {
+            q <- datastructures::queue()
+            insert <- datastructures::insert
+            pop <- datastructures::pop
+            x <- rnorm(n)
+            for (i in 1:n) insert(q, x[i])
+            for (i in 1:n) pop(q)
+        },
+        `liqueueR::Queue` = {
+            q <- liqueueR::Queue$new()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:n) q$pop()
+        },
+        `base R` = {
+            q <- Queue()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:n) q$pop()
+        },
+        `collections::Queue` = {
+            q <- collections::Queue()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:n) q$pop()
+        },
+        check = FALSE
+    )) %>%
+    mutate(expression = fct_reorder(as.character(expression), median, .desc = TRUE)) %>%
+    ggplot(aes(x = n, y = median)) +
+    geom_line(aes(color = expression)) +
+    scale_colour_brewer(palette = "Set2", direction = -1) +
+    ggtitle("push and pop n times") + ylab("time")
 ```
 
-```{r queue, echo = FALSE}
-tm <- microbenchmark(
-    `dequer::queue` = test_dequer_queue_push_pop(100),
-    `datastructures::queue` = test_datastructures_queue_push_pop(100),
-    `liqueueR::Queue` = test_liqueueR_queue_push_pop(100),
-    `collections::QueueL` = test_collections_queue_l_push_pop(100),
-    `collections::Queue` = test_collections_queue_push_pop(100),
-    unit = "relative"
-)
-autoplot(tm) + ggtitle("push and pop 100 times")
+# Stack
+
+```{r stack, echo = FALSE, cache = TRUE}
+bench::press(
+    n = c(50, 100, 500, 1000),
+    bench::mark(
+        `dequer::stack` = {
+            q <- dequer::stack()
+            push <- dequer::push
+            pop <- dequer::pop
+            x <- rnorm(n)
+            for (i in 1:n) push(q, x[i])
+            for (i in 1:n) pop(q)
+        },
+        `datastructures::stack` = {
+            q <- datastructures::stack()
+            insert <- datastructures::insert
+            pop <- datastructures::pop
+            x <- rnorm(n)
+            for (i in 1:n) insert(q, x[i])
+            for (i in 1:n) pop(q)
+        },
+        `liqueueR::Stack` = {
+            q <- liqueueR::Stack$new()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:n) q$pop()
+        },
+        `base R` = {
+            q <- Stack()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:n) q$pop()
+        },
+        `collections::Stack` = {
+            q <- collections::Stack()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:n) q$pop()
+        },
+        check = FALSE
+    )) %>%
+    mutate(expression = fct_reorder(as.character(expression), median, .desc = TRUE)) %>%
+    ggplot(aes(x = n, y = median)) +
+    geom_line(aes(color = expression)) +
+    scale_colour_brewer(palette = "Set2", direction = -1) +
+    ggtitle("push and pop n times") + ylab("time")
 ```
 
-## Stack
 
+# Deque
 
-```{r, echo = FALSE}
-test_dequer_stack_push_pop <- function(n) {
-    q <- dequer::stack()
-    push <- dequer::push
-    pop <- dequer::pop
-    for (i in 1:n) push(q, rnorm(1))
-    for (i in 1:n) pop(q)
-    q
-}
-test_datastructures_stack_push_pop <- function(n) {
-    q <- datastructures::stack()
-    insert <- datastructures::insert
-    pop <- datastructures::pop
-    for (i in 1:n) insert(q, rnorm(1))
-    for (i in 1:n) pop(q)
-    q
-}
-test_liqueueR_stack_push_pop <- function(n) {
-    q <- liqueueR::Stack$new()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:n) q$pop()
-    q
-}
-test_collections_stack_l_push_pop <- function(n) {
-    q <- collections::StackL()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:n) q$pop()
-    q
-}
-test_collections_stack_push_pop <- function(n) {
-    q <- collections::Stack()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:n) q$pop()
-    q
-}
+```{r deque, echo = FALSE, cache = TRUE}
+bench::press(
+    n = c(50, 100, 500, 1000),
+    bench::mark(
+        `dequer::deque` = {
+            q <- dequer::deque()
+            push <- dequer::push
+            pop <- dequer::pop
+            popback <- dequer::popback
+            x <- rnorm(n)
+            for (i in 1:n) push(q, x[i])
+            for (i in 1:floor(n / 2)) {
+                pop(q)
+                popback(q)
+            }
+        },
+        `base R` = {
+            q <- Deque()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:floor(n / 2)) {
+                q$pop()
+                q$popleft()
+            }
+        },
+        `collections::Stack` = {
+            q <- collections::Deque()
+            x <- rnorm(n)
+            for (i in 1:n) q$push(x[i])
+            for (i in 1:floor(n / 2)) {
+                q$pop()
+                q$popleft()
+            }
+        },
+        check = FALSE
+    )) %>%
+    mutate(expression = fct_reorder(as.character(expression), median, .desc = TRUE)) %>%
+    ggplot(aes(x = n, y = median)) +
+    geom_line(aes(color = expression)) +
+    scale_colour_brewer(palette = "Set2", direction = -1) +
+    ggtitle("push and pop n times") + ylab("time")
 ```
 
-```{r stack, echo = FALSE}
-tm <- microbenchmark(
-    `dequer::stack` = test_dequer_stack_push_pop(100),
-    `datastructures::stack` = test_datastructures_stack_push_pop(100),
-    `liqueueR::Stack` = test_liqueueR_stack_push_pop(100),
-    `collections::StackL` = test_collections_stack_l_push_pop(100),
-    `collections::Stack` = test_collections_stack_push_pop(100),
-    unit = "relative"
-)
-autoplot(tm) + ggtitle("push and pop 100 times")
-```
 
-## Deque
+# Priority Queue
 
-```{r, echo = FALSE}
-test_dequer_deque_push_pop <- function(n) {
-    q <- dequer::deque()
-    push <- dequer::push
-    pop <- dequer::pop
-    popback <- dequer::popback
-    for (i in 1:n) push(q, rnorm(1))
-    for (i in 1:floor(n / 2)) {
-        pop(q)
-        popback(q)
-    }
-    q
-}
-test_collections_deque_l_push_pop <- function(n) {
-    q <- collections::DequeL()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:floor(n / 2)) {
-        q$pop()
-        q$popleft()
-    }
-    q
-}
-test_collections_deque_push_pop <- function(n) {
-    q <- collections::Deque()
-    for (i in 1:n) q$push(rnorm(1))
-    for (i in 1:floor(n / 2)) {
-        q$pop()
-        q$popleft()
-    }
-    q
-}
-```
-
-```{r deque, echo = FALSE}
-tm <- microbenchmark(
-    `dequer::deque` = test_dequer_deque_push_pop(100),
-    `collections::DequeL` = test_collections_deque_l_push_pop(100),
-    `collections::Deque` = test_collections_deque_push_pop(100),
-    unit = "relative"
-)
-autoplot(tm) + ggtitle("push and pop 100 times")
-```
-
-## Priority Queue
-
-```{r, echo = FALSE}
-test_liqueueR_pqueue_push_pop <- function(n) {
-    q <- liqueueR::PriorityQueue$new()
-    for (i in 1:n) q$push(rnorm(1), sample.int(n, 1))
-    for (i in 1:n) q$pop()
-    q
-}
-
-test_datastructures_pqueue_push_pop <- function(n) {
-    q <- datastructures::binomial_heap(key.class = "integer")
-    insert <- datastructures::insert
-    pop <- datastructures::pop
-    for (i in 1:n) insert(q, sample.int(n, 1), rnorm(1))
-    for (i in 1:n) pop(q)
-    q
-}
-
-test_collections_pqueue_push_pop <- function(n) {
-    q <- collections::PriorityQueue()
-    for (i in 1:n) q$push(rnorm(1), sample.int(n, 1))
-    for (i in 1:n) q$pop()
-    q
-}
-```
-
-```{r pqueue, echo = FALSE}
-tm <- microbenchmark(
-    `liqueueR::PriorityQueue` = test_liqueueR_pqueue_push_pop(100),
-    `datastructures::binomial_heap` = test_datastructures_pqueue_push_pop(100),
-    `collections::PriorityQueue` = test_collections_pqueue_push_pop(100),
-    unit = "relative"
-)
-autoplot(tm) + ggtitle("push and pop 100 times")
+```{r priority_queue, echo = FALSE, cache = TRUE}
+bench::press(
+    n = c(50, 100, 500, 1000),
+    bench::mark(
+        `liqueueR::PriorityQueue` = {
+            q <- liqueueR::PriorityQueue$new()
+            x <- rnorm(n)
+            p <- sample.int(n, n, replace = TRUE)
+            for (i in 1:n) q$push(x[i], p[i])
+            for (i in 1:n) q$pop()
+        },
+        `datastructures::binomial_heap` = {
+            q <- datastructures::binomial_heap(key.class = "integer")
+            insert <- datastructures::insert
+            pop <- datastructures::pop
+            x <- rnorm(n)
+            p <- sample.int(n, n, replace = TRUE)
+            for (i in 1:n) insert(q, p[i], x[i])
+            for (i in 1:n) pop(q)
+        },
+        `collections::PriorityQueue` = {
+            q <- collections::PriorityQueue()
+            x <- rnorm(n)
+            p <- sample.int(n, n, replace = TRUE)
+            for (i in 1:n) q$push(x[i], p[i])
+            for (i in 1:n) q$pop()
+        },
+        check = FALSE
+    )) %>%
+    mutate(expression = fct_reorder(as.character(expression), median, .desc = TRUE)) %>%
+    ggplot(aes(x = n, y = median)) +
+    geom_line(aes(color = expression)) +
+    scale_colour_brewer(palette = "Set2", direction = -1) +
+    ggtitle("push and pop n times") + ylab("time")
 ```
 
 
 ## Dict / hashmap
 
-```{r, echo = FALSE}
-test_datastructures_dict_set_get <- function(n) {
-    h <- datastructures::hashmap()
-    insert <- datastructures::insert
-    for (i in 1:n) insert(h, as.character(i), rnorm(1))
-    for (i in sample(1:n)) h[as.character(i)]
-    h
-}
-test_hash_dict_set_get <- function(n) {
-    h <- hash::hash()
-    for (i in 1:n) h[[as.character(i)]] <- rnorm(1)
-    for (i in sample(1:n)) h[[as.character(i)]]
-    h
-}
-test_hashmap_dict_set_get <- function(n) {
-    h <- hashmap::hashmap(keys = character(0), values = numeric(0))
-    for (i in 1:n) h[[as.character(i)]] <- rnorm(1)
-    for (i in sample(1:n)) h[[as.character(i)]]
-    h
-}
-test_fastmap_dict_set_get <- function(n) {
-    h <- fastmap::fastmap()
-    for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in sample(1:n)) h$get(as.character(i))
-    h
-}
-test_collections_dictl_set_get <- function(n) {
-    h <- collections::DictL()
-    for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in sample(1:n)) h$get(as.character(i))
-    h
-}
-test_collections_dict_set_get <- function(n) {
-    h <- collections::Dict()
-    for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in sample(1:n)) h$get(as.character(i))
-    h
-}
+```{r dict, echo = FALSE, cache = TRUE}
+bench::press(
+    n = c(50, 100, 500, 1000),
+    bench::mark(
+        `datastructures::hashmap` = {
+            h <- datastructures::hashmap()
+            insert <- datastructures::insert
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) insert(h, k[i], x[i])
+            for (i in sample(1:n)) h[k[i]]
+        },
+        `hash::hash` = {
+            h <- hash::hash()
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h[[k[i]]] <- x[i]
+            for (i in sample(1:n)) h[[k[i]]]
+        },
+        `hashmap::hashmap` = {
+            h <- hashmap::hashmap(keys = character(0), values = numeric(0))
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h[[k[i]]] <- x[i]
+            for (i in sample(1:n)) h[[k[i]]]
+        },
+        `fastmap::fastmap` = {
+            h <- fastmap::fastmap()
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h$set(k[i], x[i])
+            for (i in sample(1:n)) h$get(k[i])
+        },
+        `base R` = {
+            h <- Dict()
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h$set(k[i], x[i])
+            for (i in sample(1:n)) h$get(k[i])
+        },
+        `collections::Dict` = {
+            h <- collections::Dict()
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h$set(k[i], x[i])
+            for (i in sample(1:n)) h$get(k[i])
+        },
+        check = FALSE
+    )) %>%
+    mutate(expression = fct_reorder(as.character(expression), median, .desc = TRUE)) %>%
+    ggplot(aes(x = n, y = median)) +
+    geom_line(aes(color = expression)) +
+    scale_colour_brewer(palette = "Set2", direction = -1) +
+    ggtitle("set and get n times") + ylab("time")
 ```
 
-```{r dict, echo = FALSE}
-tm <- microbenchmark(
-    `datastructures::hashmap` = test_datastructures_dict_set_get(100),
-    `hash::hash` = test_hash_dict_set_get(100),
-    `hashmap::hashmap` = test_hashmap_dict_set_get(100),
-    `fastmap::fastmap` = test_fastmap_dict_set_get(100),
-    `collections::DictL` = test_collections_dictl_set_get(100),
-    `collections::Dict` = test_collections_dict_set_get(100),
-    unit = "relative"
-)
-autoplot(tm) + ggtitle("set and get 100 times")
-```
 
-## OrderedDict
+## Ordered Dict
 
-```{r, echo = FALSE}
-test_collections_ordered_dict_l_set_get <- function(n) {
-    h <- collections::OrderedDictL()
-    for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in sample(1:n)) h$get(as.character(i))
-    h
-}
-test_collections_ordered_dict_set_get <- function(n) {
-    h <- collections::OrderedDict()
-    for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in sample(1:n)) h$get(as.character(i))
-    h
-}
-```
+It is not a fair benchmark as OrderedDict is built on top of Dict. We are interested in the extra over head in OrderedDict.
 
-```{r ordered_dict, echo = FALSE}
-tm <- microbenchmark(
-    `collections::OrderedDictL` = test_collections_ordered_dict_l_set_get(100),
-    `collections::OrderedDict` = test_collections_ordered_dict_set_get(100),
-    unit = "relative"
-)
-autoplot(tm) + ggtitle("set and get 100 times")
-```
-
-### OrderedDict vs Dict
-
-```{r, echo = FALSE}
-test_collections_expiring_dict_set_get <- function(n) {
-    h <- collections::ExpiringDict()
-    for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in sample(1:n)) h$get(as.character(i))
-    h
-}
-```
-
-```{r ordered_dict_vs_dict, echo = FALSE}
-tm <- microbenchmark(
-    `collections::Dict` = test_collections_dict_set_get(1000),
-    `collections::OrderedDict` = test_collections_ordered_dict_set_get(1000),
-    `collections::ExpiringDict` = test_collections_expiring_dict_set_get(1000),
-    unit = "relative"
-)
-autoplot(tm) + ggtitle("set and get 100 times")
+```{r ordered_dict, echo = FALSE, cache = TRUE}
+bench::press(
+    n = c(50, 100, 500, 1000),
+    bench::mark(
+        `base R` = {
+            h <- OrderedDict()
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h$set(k[i], x[i])
+            for (i in sample(1:n)) h$get(k[i])
+        },
+        `collections::Dict` = {
+            h <- collections::Dict()
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h$set(k[i], x[i])
+            for (i in sample(1:n)) h$get(k[i])
+        },
+        `collections::OrderedDict` = {
+            h <- collections::OrderedDict()
+            x <- rnorm(n)
+            k <- as.character(seq_len(n))
+            for (i in 1:n) h$set(k[i], x[i])
+            for (i in sample(1:n)) h$get(k[i])
+        },
+        check = FALSE
+    )) %>%
+    mutate(expression = fct_reorder(as.character(expression), median, .desc = TRUE)) %>%
+    ggplot(aes(x = n, y = median)) +
+    geom_line(aes(color = expression)) +
+    scale_colour_brewer(palette = "Set2", direction = -1) +
+    ggtitle("set and get n times") + ylab("time")
 ```
